fixed rules-button overlaping with modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,7 @@ main.hidden {
     align-items: center;
     justify-content: center;
     background: rgba(0, 0, 0, 0.6);
+    z-index: 999;
 }
 
 .rules-modal-active {
